# dreamengine-studio

./: .gitignore  AUDIO.md  CLAUDE.md  DIGEST-2026-07-10-to-18.md  Makefile  POLISH_TODO.md  VISION.md  about tags.md  notes.md  render.yaml  studio.md
.githooks/: pre-commit
android/: .gitignore  build.gradle  build.sh  gradle.properties  settings.gradle
android/app/src/main/cpp/: CMakeLists.txt  engine.h  main.c
apps/: studio.md
data-tools/: README.md
docs/: API_RESEARCH.md  HANDOFF-lanes.md  HANDOFF.md  POLISH_TODO.md  README.md  SHARING.md  STATUS.md  TOOLS.md  VISION.md  band-briefs.html  cart-compendium.html  cart-polish-punchlist.md  debug-printh-watch.md  design-board.html  history-spine.json  history.html  instrument-bank-plan.md  learn-you-a-dreamengine.html  other-projects.md  reflections.html  tuning-handoff.md
editor/: index.html  package-lock.json  package.json  sprite-editor.html  vite.config.js
field-notes/: 003-curation.md  007-the-evolution-of-documentation.md  009-the-negative-space-of-dreamengine.md  011-tool-discovery.md  100-first-synthesis.md  FIELD-NOTES.md  README.md  REVIEW_CHANGES.md  distillator.md  future-research.md  onepiecofadvice.md  tools-we-need.md  what is this agan.md  what is this.md  what-is-this.md
fmltools/: README.md  TODO.md  floorplanner.js  fml-assets.js  fml-sprites.js  fml-textures.js  fml2cart.js  make-floor.sh
ios/: .gitignore  README.md  build.sh  device.sh  measure-device.sh  project.yml  testflight.sh
runtime/: acid303.h  ampcab.h  boxrig.h  cards.h  citygen.h  color.h  cursor.h  disclose.h  dos_8x8_font.h  drumkit.h  endcard.h  face.h  font16x16_data.h  font9x14_data.h  font9x16_data.h  fontcomic10x20_data.h  fonts_baked.h  fontthin8x8_data.h  fxicons.h  game_rect.h  gestures.h  harmony.h  improv.h  json.h  keybed.h  lay.h  mic.h  mic_desktop.h  midi_input.h  morphdrum.h  net.h  physics.h  platform.h  pointer.h  radio.h  raylib_compat.c  raylib_compat.h  roadkit.h  shadermath.h  solo.h  (+12 more)
site/: debug-overlay.js  index.html
tools/: 01-hello.c  02-shapes.c  03-move.c  04-buttons.c  05-sprite.c  (+171 more)
(+3090 files in other folders)
